# collatz

./: .flake8  .gitignore  AGENTS.md  CITATION.cff  DEPOSIT.md  LICENSE  LITERATURE_REVIEW.md  Makefile  README.md  RELATORIO.md  REPORT.md  REVIEW.md  TODO.md  pyproject.toml  reproduce_paper_results.py  requirements.txt  scratch.py  scratch2.py  scratch3.py
.github/workflows/: ci.yml
collatz/: __init__.py  __main__.py  core.py  cycles.py  density.py  invariants.py  padic.py  report.py  search.py  spectral.py  stopping.py  symmetries.py  transfer.py  tree.py
lean/: CollatzObstruction.lean  README.md  lake-manifest.json  lakefile.toml
lean/CollatzObstruction/: Arith.lean  Basic.lean  Modular.lean
note/: README.md  lyapunov-obstruction-en.tex  nota-obstrucao-lyapunov-pt.tex
paper/: main.tex  make_residue_graph_figure.py  references.bib  residue_graph_j4.tex
tests/: test_cli.py  test_core.py  test_cycles.py  test_density.py  test_invariants.py  test_padic.py  test_report.py  test_search.py  test_spectral.py  test_stopping.py  test_symmetries.py  test_transfer.py  test_tree.py
