[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "collatz-lab"
version = "1.0.0"
description = "Exact computational laboratory for the Collatz conjecture (3n+d systems): cycle enumeration, Diophantine exclusion, modular Lyapunov obstruction, p-adic transfer operators."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Tulio Marchetto", email = "tulio@holp.com.br" }]
keywords = ["collatz", "3n+1", "number-theory", "dynamical-systems", "p-adic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]
# The package is pure standard-library Python: no runtime dependencies.
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Repository = "https://github.com/tuliomarchetto/Collatz"

[tool.setuptools]
packages = ["collatz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Allow `pytest` to import the package from a source checkout without
# requiring an editable install first.
pythonpath = ["."]
